# julia-daemon

./: README.md  julia_eval.py  julia_server.py  pyproject.toml  test_eval.py  test_integration.py  test_server.py
src/julia_daemon/: eval.py  server.py
