[project]
name = "julia-daemon"
version = "0.1.0"
description = "Daemon for running Julia code in persistent REPL sessions"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
julia-daemon = "server:main"
julia-eval = "julia_eval:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]
