[project]
name = "julia-daemon"
version = "0.1.0"
description = "Daemon for running Julia code in persistent REPL sessions"
requires-python = ">=3.10"
dependencies = []

[build-system]
requires = ["uv_build >= 0.10.0, <0.11.0"]
build-backend = "uv_build"

[project.scripts]
julia-daemon = "julia_daemon.server:main"
julia-eval = "julia_daemon.julia_eval:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[project.optional-dependencies]
dev = [
"pytest>=8.0",
"pytest-asyncio>=0.24",
]
